Fix WordPress align* classes CSS

--- a/css/sass/_base.scss
+++ b/css/sass/_base.scss
@@ -64,17 +64,17 @@ img {
 }
 
 a img, img {
-  .alignright {
+  &.alignright {
     float:right;
     margin:0 0 1em 1em;
   }
 
-  .alignleft {
+  &.alignleft {
     float:left;
     margin:0 1em 1em 0;
   }
 
-  .aligncenter {
+  &.aligncenter {
     display: block;
     margin-left: auto;
     margin-right: auto;
